@@ -1,3 +1,12 @@
+2007-11-23  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* tif_dir.c, tif_dirread.c, tif_dirwrite.c, tif_read.c, tif_write.c,
+	tiffiop.h: Added TIFF_BUF4WRITE flag to indicate if contents of the 
+	rawcp/rawcc buffer are for writing and thus may require flushing.
+	Necessary to distinguish whether they need to be written to disk when
+	in mixed read/write mode and doing a mixture of writing followed by
+	reading.  http://trac.osgeo.org/gdal/ticket/1948
+
 2007-11-23  Andrey Kiselev  <dron@ak4719.spb.edu>
 
 	* configure.com, libtiff/tif_vms.c: Better OpenVMS support. Patches
